# MPFR_GMP_MPIR

./: .gitignore  CMakeLists.txt  README.md
gmp/: CMakeLists.txt  gmp-impl.h
gmp/mpn/generic/: addmul_1.c  jacobi.c  perfsqr.c
mpfr/: CMakeLists.txt  VERSION  get_patches.c
mpfr/mpir/lib/x64/Release/: mpir.lib  mpirxx.lib
mpir/: CMakeLists.txt
mpir/mpz/: cmpabs_d.c  get_sx.c  get_ux.c  iset_sx.c  iset_ux.c  set_sx.c  set_ux.c
mpir/printf/: asprintf.c  asprntffuns.c  doprnt.c  doprntf.c  doprnti.c  fprintf.c  obprintf.c  obprntffuns.c
src/: main.cpp
